2008-02-24  Brandon Hale <brandon@brandonhale.us>

	* AUTHORS, COPYING:
	Updates, taken from Debian package. Thanks to Bob Mauchin on bug
	#496016.

	* Bug #448927:
	Crash when searching for a station due to differing locale handling of
	decimal numbers. Patch from Bob Mauchin.

	* Bug #465549:
	Another crash on matching strings on search. Patch from Bob Mauchin.

2008-02-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Add nb to ALL_LINGUAS.

2007-12-26  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.ac: Added Portuguese (pt) to ALL_LINGUAS.

2007-10-26  iain <iain@gnome.org>

	* src/Makefile.am: Add the Playlist.cs file

	* Player.cs, PlayerWindow.cs: Rename Playlist property to Plist.

2007-10-14  Brandon Hale <brandon@brandonhale.us>

	Patch from Lukasz Jernas on bug #470417 to improve the icon install
	behaviour.

2007-10-14  Brandon Hale <brandon@brandonhale.us>

	Patch from Thomas Wendt on bug #483359.
	Support the latest last.fm protocols for playlists and scrobbling
	tracks. This adds or changes a good bit of code, so please test away.

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.ac: Added 'oc' to ALL_LINGUAS.

2007-09-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * configure.ac: Added es to ALL_LINGUAS

2007-09-08  Brandon Hale  <brandon@brandonhale.us>

	* src/TrayIcon.cs, src/PlayerWindow.cs:
	Patch from Lukaz on bug #466666. 
	Support volume changing by moving the scroll wheel 
	over the tray icon.

2007-09-03  Ilkka Tuohela  <hile@iki.fi>

	* configure.ac: Added fi to ALL_LINGUAS

2007-09-31  Baris Cicek <baris@teamforce.name.tr>

	* MAINTAINERS: Updated according to the GNOME convention

2007-06-14  Pema Geyleg <pema.geyleg@gmail.com>

	* configure.ac: Added dz to ALL_LINGUAS

2007-05-22  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* configure.ac: Added fr to ALL_LINGUAS

2007-05-16  David Lodge <dave@cirt.net>

	* configure.ac: Added en_GB to ALL_LINGUAS
